# njtech_network_auto_auth

./: README.md
dotnet_ver/: dotnet_ver.sln
dotnet_ver/Android/: Android.csproj  MainActivity.cs
dotnet_ver/Android/Properties/: AndroidManifest.xml  AssemblyInfo.cs
dotnet_ver/Shared/: Channel.cs  Libs.cs  Shared.csproj
dotnet_ver/Wpf/: App.xaml  App.xaml.cs  AutoStartUp.cs  ConfigWindow.xaml  ConfigWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Utils.cs  Wpf.csproj
dotnet_ver/Wpf/Properties/: launchSettings.json
rust_ver/: Cargo.toml
rust_ver/src/: lib.rs  main.rs
shell_ver/: login.sh
