[package]
name = "njtech_home_autoauth"
author = "artiga033"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11", features=["blocking","cookies"]}
regex = "1"
[target.mipsel-unknown-linux-musl.dependencies]
openssl={version="0.10",features=["vendored"]}
openssl-src="300"
[profile.release]
opt-level = "z"
lto=true
codegen-units = 1
panic = "abort"
